<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright 2015 The Chromium Authors
     Use of this source code is governed by a BSD-style license that can be
     found in the LICENSE file.
-->

<resources>
    <string name="app_name">WebView Shell</string>
    <string name="title_activity_telemetry">WebView Telemetry</string>
    <string name="title_activity_jank">WebView Jank Tester</string>
    <string name="title_activity_startup_time">WebView Startup Time Tester</string>
    <string name="title_activity_browser">WebView Browser Tester</string>
    <string name="title_activity_browser_second_process">Second Process Browser Tester</string>
    <string name="title_activity_manually_triggered_startup">Manually Triggered Startup Tester</string>
    <string name="title_activity_layout_test">WebView Layout Test</string>
    <string name="title_activity_multi_profile">WebView Multi-Profile Tester</string>
    <string name="title_activity_thread_test">WebView Thread Test</string>
    <string name="title_activity_page_cycler">WebView Page Cycler Test</string>
    <string name="title_activity_create_destroy">WebView Create Destroy</string>
    <string name="menu_reload_webview">Reload</string>
    <string name="menu_reset_webview">Reset WebView</string>
    <string name="menu_destroy_webview">Destroy WebView</string>
    <string name="action_startup_webview">Startup WebView</string>
    <string name="action_create_webview_instance">Create WebView instance</string>
    <string name="menu_clear_cache">Clear cache</string>
    <string name="menu_get_cookie">Get Cookie</string>
    <string name="menu_enable_tracing">Enable tracing</string>
    <string name="menu_force_dark_off">Force Dark Off</string>
    <string name="menu_force_dark_auto">Force Dark Auto</string>
    <string name="menu_force_dark_on">Force Dark On</string>
    <string name="menu_webauthn_browser">WebAuthn Browser Mode</string>
    <string name="menu_webauthn_app">WebAuthn App Mode</string>
    <string name="menu_webauthn_off">WebAuthn Off</string>
    <string name="menu_algorithmic_darkening_on">Algorithmic Darkening ON</string>
    <string name="menu_enable_third_party_cookies">Enable third-party cookies</string>
    <string name="menu_night_mode_on">Night Mode ON</string>
    <string name="menu_multi_profile_activity">Multi-Profile test</string>
    <string name="menu_start_animation_activity">Animation test</string>
    <string name="menu_start_user_actions_activity">Inspect user actions</string>
    <string name="menu_fullscreen_activity">Go Fullscreen</string>
    <string name="menu_print">Print</string>
    <string name="menu_about">About WebView</string>
    <string name="menu_devui">WebView DevTools</string>
    <string name="menu_hide">Show/Hide WebView</string>
    <string name="menu_preconnect">Preconnect</string>
    <string name="menu_add_quic_hint">Add QUIC hint</string>
    <string name="menu_check_protocol">Check Protocol</string>
    <string name="load_url">Load URL</string>
    <string name="url_hint">Enter URL</string>

    <!-- activity_webview_animation_test strings -->
    <string name="alpha_button">View Alpha</string>
    <string name="layer_button">Layer</string>
    <string name="rotate_button">Rotate</string>
    <string name="scale_button">Scale</string>
    <string name="stencil_button">Rounded corner</string>
    <string name="translate_button">Translate</string>

    <!-- activity_inspect_user_actions strings -->
    <string name="record_action_button">Record User Actions</string>
    <string name="stop_record_action_button">Stop Recording Actions</string>
    <string name="re_record_action_button">Re-record User Actions</string>
    <string name="close_activity_button">Close activity</string>

    <!--  activity_web_platform_tests strings -->
    <string name="close_button">close</string>
</resources>
