<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright 2015 The Chromium Authors
     Use of this source code is governed by a BSD-style license that can be
     found in the LICENSE file. -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/menu_reload_webview"
          android:title="@string/menu_reload_webview"/>
    <item android:id="@+id/menu_reset_webview"
          android:title="@string/menu_reset_webview"/>
    <item android:id="@+id/menu_clear_cache"
          android:title="@string/menu_clear_cache"/>
    <item android:id="@+id/menu_get_cookie"
          android:title="@string/menu_get_cookie"/>
    <item android:id="@+id/menu_enable_tracing"
          android:checkable="true"
          android:title="@string/menu_enable_tracing"/>
    <group android:checkableBehavior="single">
        <item android:id="@+id/menu_force_dark_off"
              android:title="@string/menu_force_dark_off"/>
        <item android:id="@+id/menu_force_dark_auto"
              android:title="@string/menu_force_dark_auto"/>
        <item android:id="@+id/menu_force_dark_on"
              android:title="@string/menu_force_dark_on"/>
    </group>
    <item android:id="@+id/menu_night_mode_on"
    android:checkable="true"
          android:title="@string/menu_night_mode_on"/>
    <item android:id="@+id/menu_algorithmic_darkening_on"
          android:checkable="true"
          android:title="@string/menu_algorithmic_darkening_on"/>
    <item android:id="@+id/menu_enable_third_party_cookies"
            android:checkable="true"
        android:title="@string/menu_enable_third_party_cookies"/>
    <item android:id="@+id/menu_print"
          android:title="@string/menu_print"/>
    <item android:id="@+id/menu_multi_profile"
        android:title="@string/menu_multi_profile_activity"/>
    <item android:id="@+id/start_animation_activity"
          android:title="@string/menu_start_animation_activity"/>
    <item android:id="@+id/menu_about"
          android:title="@string/menu_about"/>
    <item android:id="@+id/menu_devui"
          android:title="@string/menu_devui"/>
    <item android:id="@+id/menu_hide"
          android:title="@string/menu_hide"/>
</menu>
