<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright 2026 The Chromium Authors
     Use of this source code is governed by a BSD-style license that can be
     found in the LICENSE file.
-->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <Button
        android:id="@+id/toggle_record_actions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/record_action_button" />
    <Button
        android:id="@+id/re_record_actions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/re_record_action_button" />
    <Button
        android:id="@+id/close_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/close_activity_button" />
    <WebView
        android:id="@+id/inspect_user_actions_webview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
    />
</LinearLayout>
